--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.7",
     "framer-motion": "^12.23.24",
     "next": "16.0.3",
